--- a/assets/javascripts/discourse/templates/discovery/calendar.hbs
+++ b/assets/javascripts/discourse/templates/discovery/calendar.hbs
@@ -1,5 +1,21 @@
-{{events-calendar
-  topics=model.topics
-  category=category
-  loading=discovery.loading
-  initialDateRange=initialDateRange}}
+<Discovery::Navigation
+  @category={{this.model.category}}
+  @tag={{this.model.tag}}
+  @additionalTags={{this.additionalTags}}
+  @filterType={{this.model.filterType}}
+  @noSubcategories={{this.model.noSubcategories}}
+  @canBulkSelect={{this.canBulkSelect}}
+  @bulkSelectHelper={{this.bulkSelectHelper}}
+  @createTopic={{this.createTopic}}
+  @createTopicDisabled={{this.createTopicDisabled}}
+  @canCreateTopicOnTag={{this.canCreateTopicOnTag}}
+  @toggleTagInfo={{this.toggleTagInfo}}
+  @tagNotification={{this.tagNotification}}
+/>
+<div>
+  {{events-calendar
+    topics=model.list.topics
+    category=category
+    loading=discovery.loading
+    initialDateRange=initialDateRange}}
+</div>
